# my-chatbot

./: .gitignore  pyproject.toml
app/mcp_servers/: remote_servers.py
