[project]
name = "my-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastmcp>=3.4.2",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "python-dotenv>=1.2.2",
]
